<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e6e6e6"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/addPost_hint"
                android:textColor="#515151"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="705dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="主题："
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv1"
                android:hint="@string/title_hint"
                android:textColorHint="#bcbcbc"
                android:background="@null"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="内容："
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv2"
                android:hint="@string/content_hint"
                android:textColorHint="#bcbcbc"
                android:background="@null"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:paddingTop="20dp"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="所属板块："
                android:textColor="#404040"
                android:textSize="16sp" />

<!--            单选框、非动态生成-->
            <RadioGroup
                android:id="@+id/rg_block"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/tv3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_block1"
                        android:layout_height="35dp"
                        android:layout_width="wrap_content"
                        android:checked="true"
                        android:text="@string/block1" />

                    <RadioButton
                        android:id="@+id/rb_block2"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/block2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_block3"
                        android:layout_height="35dp"
                        android:layout_width="wrap_content"
                        android:text="@string/block3" />

                    <RadioButton
                        android:id="@+id/rb_block4"
                        android:layout_height="35dp"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/block4" />

                </LinearLayout>
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <Button
            android:id="@+id/btn_addPost"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="88dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_generic_btn"
            android:text="@string/confirm_add"
            android:enabled="true"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>