<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MyOneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e6e6e6"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/myOne_hint"
                android:textColor="#515151"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="705dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="主题："
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv1"
                android:hint="@string/title_hint"
                android:textColorHint="#bcbcbc"
                android:background="@null"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="内容："
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv2"
                android:hint="@string/content_hint"
                android:textColorHint="#bcbcbc"
                android:background="@null"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:paddingTop="20dp"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="所属板块："
                android:textColor="#404040"
                android:textSize="16sp" />

            <!--            单选框、非动态生成-->
            <RadioGroup
                android:id="@+id/rg_block"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/tv3">

                <RadioButton
                    android:id="@+id/rb_block1"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:text="@string/block1" />

                <RadioButton
                    android:id="@+id/rb_block2"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/block2" />

                <RadioButton
                    android:id="@+id/rb_block3"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:text="@string/block3" />

                <RadioButton
                    android:id="@+id/rb_block4"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:text="@string/block4" />

            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="上次修改："
                android:textColor="#5E5E5E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv4"
                android:background="@null"
                android:textColor="#5E5E5E"
                tools:text="2023-05-27 12:24:33"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginLeft="60dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_confirmUpdate"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginTop="88dp"
                android:background="@drawable/shape_generic_btn"
                android:text="@string/confirm_update"
                android:textColor="@color/white"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_deletePost"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="88dp"
                android:background="@drawable/shape_generic2_btn"
                android:text="@string/delete_post"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>