<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".admin.UUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_my_info_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/c_user"
                android:textColor="@color/skin_text_white"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="705dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="账号 "
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv1"
                android:background="@null"
                android:text="account"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="密码 "
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv2"
                android:background="@null"
                android:text="password"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="昵称 "
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv3"
                android:background="@null"
                android:text="nickname"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="注册日期 "
                android:textColor="#404040"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_regTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tv4"
                android:text="@string/regTime_hint"
                android:textColor="#404040"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tv_regTime"
                android:text="(无法更改)"
                android:textColor="#bfbfbf"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="个人简介 "
                android:textColor="#404040"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_signature"
                android:layout_width="309dp"
                android:layout_height="139dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv5"
                android:background="@null"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:paddingTop="20dp"
                android:hint="@string/signature_hint"
                android:text="signature"
                android:textColor="#404040"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginLeft="60dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_update"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_generic_btn"
                android:text="@string/m_verify"
                android:textColor="@color/white"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_generic2_btn"
                android:text="@string/m_delete"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>