<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ShowOnePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_my_info_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/c_post"
                android:textColor="@color/skin_text_white"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_collects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_header"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="start|center"
                android:src="@mipmap/header" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="start|center"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="作者昵称" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="帖子主题。帖子正文内容，帖子正文内容，帖子正文内容，帖子正文内容，帖子正文内容，帖子正文内容。" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_block"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:gravity="start|center"
                android:textColor="@color/blockColor"
                android:textSize="13sp"
                tools:text="#瓜田趣事#" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="13sp"
                tools:text="2023-05-28 20:51:12" />

            <TextView
                android:id="@+id/tv_collects_num"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="13sp"
                tools:text="7个收藏（点击收藏）" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <EditText
            android:id="@+id/et_comment_cnt"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/comment_hint"
            android:textColor="#404040"
            android:textColorHint="#bcbcbc"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape_big_btn_unable"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>